--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-percent",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Check if a given value is in the percent format.",
   "main": "lib/index.js",
   "directories": {
@@ -35,6 +35,7 @@
     "src/",
     "resources/",
     "menu/",
+    "scripts/",
     "cli.js",
     "index.js"
   ]
