--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-percent",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Check if a given value is in the percent format.",
   "main": "lib/index.js",
   "directories": {
@@ -37,6 +37,9 @@
     "resources/",
     "menu/",
     "cli.js",
-    "index.js"
+    "index.js",
+    "bloggify.js",
+    "bloggify.json",
+    "bloggify/"
   ]
 }
