--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "is-percent",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Check if a given value is in the percent format.",
   "main": "lib/index.js",
   "directories": {
@@ -38,6 +38,8 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
     "bloggify.json",
     "bloggify/"
